Added comment to notebook

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -163,7 +163,7 @@
         "# Install the correct Python version\n",
         "! pyenv install \n",
         "\n",
-        "# Install poetry\n",
+        "# Install poetry #TODO: Fill this section!!\n",
         "\n",
         "# configure poetry \n",
         "! poetry config virtualenvs.prefer-active-python true\n",
@@ -200,12 +200,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "BF1j6f9HApxa"
       },
       "source": [
-        "## Before you begin\n",
+        "## 1. Setup\n",
         "\n",
         "### Set up your Google Cloud project\n",
         "\n",
@@ -265,19 +266,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "region"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "env: VERTEX_LOCATION=europe-west2\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "vertex_location = \"europe-west2\"  # @param {type: \"string\"}\n",
         "\n",
@@ -320,76 +313,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "env: TEMP=vertex-pipelines@europe-west2.iam.gserviceaccount.com\n",
-            "env: VERTEX_SA_EMAIL=${TEMP}\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "vertex_sa_email=f\"vertex-pipelines@{vertex_location}.iam.gserviceaccount.com\" #TODO: vertex_location should be vertex_project_id\n",
         "\n",
-        "%env TEMP={vertex_sa_email}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 52,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "env: TEST=vertex-pipelines@europe-west2.iam.gserviceaccount.com\n"
-          ]
-        }
-      ],
-      "source": [
-        "%env TEST={vertex_sa_email}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 64,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "${TEMP}\n",
-            "vertex-pipelines@europe-west2.iam.gserviceaccount.com\n"
-          ]
-        }
-      ],
-      "source": [
-        "! echo ${VERTEX_SA_EMAIL} && echo ${TEST}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "-pipelines@testing.iam.gserviceaccount.com\n",
-            "testing\n",
-            "569Xpipelines@testing.iam.gserviceaccount.com\n"
-          ]
-        }
-      ],
-      "source": [
-        "! echo {VERTEX_SA_EMAIL} && echo {VERTEX_PROJECT_ID} && echo ${VERTEX_SA_EMAIL}"
+        "# Set the environment variable\n",
+        "%env VERTEX_SA_EMAIL={vertex_sa_email}"
       ]
     },
     {
@@ -424,7 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "254614fa0c46"
       },
@@ -444,7 +375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "603adbbf0532"
       },
@@ -462,75 +393,6 @@
       "source": [
         "**4. Service account or other**\n",
         "* See how to grant Cloud Storage permissions to your service account at https://cloud.google.com/storage/docs/gsutil/commands/iam#ch-examples."
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## xgboost example"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "TESTVAR=\"test\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "echo \n",
-            "\n"
-          ]
-        }
-      ],
-      "source": [
-        "! make becky-test"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "! make run pipeline=training wait=true"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Configuration file exists at /Users/beckyinkpen/Library/Preferences/pypoetry, reusing this directory.\n",
-            "\n",
-            "Consider moving TOML configuration files to /Users/beckyinkpen/Library/Application Support/pypoetry, as support for the legacy directory will be removed in an upcoming release.\n",
-            "/Users/beckyinkpen/Code/vertex-pipelines-end-to-end-samples/pipelines/src/pipelines/prediction/pipeline.yaml\n",
-            "Building training image\n",
-            "\u001b[1;31mERROR:\u001b[0m (gcloud.builds.submit) The user is forbidden from accessing the bucket [dt-turbo-templates-dev-staging]. Please check your organization's policy or if the user has the \"serviceusage.services.use\" permission. Giving the user Owner, Editor, or Viewer roles may also fix this issue. Alternatively, use the --no-source option and access your source code via a different method.\n",
-            "Building serving image\n",
-            "\u001b[1;31mERROR:\u001b[0m (gcloud.builds.submit) The user is forbidden from accessing the bucket [dt-turbo-templates-dev-staging]. Please check your organization's policy or if the user has the \"serviceusage.services.use\" permission. Giving the user Owner, Editor, or Viewer roles may also fix this issue. Alternatively, use the --no-source option and access your source code via a different method.\n",
-            "make[1]: *** [build] Error 1\n",
-            "make: *** [run] Error 2\n"
-          ]
-        }
-      ],
-      "source": [
-        "! make run pipeline=prediction wait=false"
       ]
     },
     {
@@ -620,12 +482,29 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 2. Training Pipeline"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 3. Prediction Pipeline"
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "TpV-iwP9qw9c"
       },
       "source": [
-        "## Cleaning up\n",
+        "## 4. Cleaning up\n",
         "\n",
         "To clean up all Google Cloud resources used in this project, you can [delete the Google Cloud\n",
         "project](https://cloud.google.com/resource-manager/docs/creating-managing-projects#shutting_down_projects) you used for the tutorial.\n",
@@ -637,7 +516,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "sx_vKniMq9ZX"
       },
