--- a/examples/try_it_yourself.ipynb
+++ b/examples/try_it_yourself.ipynb
@@ -163,6 +163,14 @@
     "#ERRORS\n",
     "# bq mk asks for code to be pasted from generated link to authenticate data transfer. Cant be done in jupyter?\n",
     "\n",
+    "# bq mk --transfer_config \\\n",
+    "#   --project_id=${VERTEX_PROJECT_ID} \\\n",
+    "#   --data_source=\"cross_region_copy\" \\\n",
+    "#   --target_dataset=\"chicago_taxi_trips\" \\\n",
+    "#   --display_name=\"Chicago taxi trip mirror\" \\\n",
+    "#   --params='{\"source_dataset_id\":\"'\"chicago_taxi_trips\"'\",\"source_project_id\":\"'\"bigquery-public-data\"'\"}'\n",
+    "\n",
+    "\n",
     "# python code below gives \"Request contains an invalid argument. error\n",
     "\n",
     "\n",
