feat: deployt chdir

--- a/examples/try_it_yourself.ipynb
+++ b/examples/try_it_yourself.ipynb
@@ -94,8 +94,8 @@
    },
    "outputs": [],
    "source": [
-    "!gcloud services enable cloudresourcemanager.googleapis.com --project={PROJECT_ID}\n",
-    "!gcloud services enable serviceusage.googleapis.com --project={PROJECT_ID}\n",
+    "# !gcloud services enable cloudresourcemanager.googleapis.com --project={PROJECT_ID}\n",
+    "# !gcloud services enable serviceusage.googleapis.com --project={PROJECT_ID}\n",
     "!gcloud storage buckets create gs://{PROJECT_ID}-tfstate --project={PROJECT_ID} --location={LOCATION} --uniform-bucket-level-access"
    ]
   },
@@ -121,7 +121,10 @@
    "outputs": [],
    "source": [
     "#Make deploy needs approval (i.e. -auto-approve flag) MAKE FILE WOULD NEED SOME CHANGES\n",
-    "!make deploy"
+    "#!make deploy\n",
+    "! terraform -chdir=terraform/envs/dev init -backend-config='bucket=${VERTEX_PROJECT_ID}-tfstate' \n",
+    "! terraform -chdir=terraform/envs/dev plan -var 'project_id=${VERTEX_PROJECT_ID}' -var 'region=${VERTEX_LOCATION}'\n",
+    "# ! terraform -chdir=terraform/envs/dev apply -var 'project_id=${VERTEX_PROJECT_ID}' -var 'region=${VERTEX_LOCATION}' -auto-approve"
    ]
   },
   {
