feat: Updated Tutorial

--- a/examples/pipelines.ipynb
+++ b/examples/pipelines.ipynb
@@ -2988,7 +2988,7 @@
     }
    ],
    "source": [
-    "vertex_project_id = \"dt-donatas-sandbox-dev\"  # @param {type:\"string\"}\n",
+    "vertex_project_id = \"[my-project-id]\"  # @param {type:\"string\"}\n",
     "\n",
     "# Set the project id\n",
     "! gcloud config set project {vertex_project_id}\n",
@@ -3107,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
@@ -3116,12 +3116,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: VERTEX_PIPELINE_ROOT=gs://$dt-donatas-sandbox-dev-pl-root\n"
+      "env: VERTEX_PIPELINE_ROOT=gs://dt-donatas-sandbox-dev-pl-root\n"
      ]
     }
    ],
    "source": [
-    "vertex_pipeline_root=f\"gs://${vertex_project_id}-pl-root\"\n",
+    "vertex_pipeline_root=f\"gs://{vertex_project_id}-pl-root\"\n",
     "\n",
     "# Set the environment variable\n",
     "%env VERTEX_PIPELINE_ROOT={vertex_pipeline_root}"
@@ -3621,7 +3621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
@@ -3708,7 +3708,129 @@
       "\u001b[36mINFO\u001b[0m[0004] Found cached layer, extracting to filesystem\n",
       "\u001b[36mINFO\u001b[0m[0006] RUN poetry config virtualenvs.create false && poetry install \n",
       "\u001b[36mINFO\u001b[0m[0006] Found cached layer, extracting to filesystem\n",
-      "\u001b[36mINFO\u001b[0m[0026] Storing source image from stage 0 at path /kaniko/stages/0\n"
+      "\u001b[36mINFO\u001b[0m[0026] Storing source image from stage 0 at path /kaniko/stages/0\n",
+      "\u001b[36mINFO\u001b[0m[0036] Deleting filesystem...\n",
+      "\u001b[36mINFO\u001b[0m[0036] Base image from previous stage 0 found, using saved tar at path /kaniko/stages/0 \n",
+      "\u001b[36mINFO\u001b[0m[0036] Executing 0 build triggers\n",
+      "\u001b[36mINFO\u001b[0m[0040] Building stage 'builder' [idx: '1', base-idx: '0'] \n",
+      "\u001b[36mINFO\u001b[0m[0040] Unpacking rootfs as cmd COPY training/train.py training/train.py requires it.\n",
+      "\u001b[36mINFO\u001b[0m[0052] COPY training/train.py training/train.py     \n",
+      "\u001b[36mINFO\u001b[0m[0052] Taking snapshot of files...                  \n",
+      "\u001b[36mINFO\u001b[0m[0052] Pushing image to europe-west2-docker.pkg.dev/dt-donatas-sandbox-dev/vertex-images/training: \n",
+      "\u001b[36mINFO\u001b[0m[0052] Pushed europe-west2-docker.pkg.dev/dt-donatas-sandbox-dev/vertex-images/training@sha256:a9635753244b1d46a825feff9270588dde7545418d044727524b129c378b4fba\n",
+      "PUSH\n",
+      "DONE\n",
+      "--------------------------------------------------------------------------------\n",
+      "ID                                    CREATE_TIME                DURATION  SOURCE                                                                                             IMAGES  STATUS\n",
+      "8186df5e-46d3-4ff7-909b-1d5fb539e3a1  2023-09-06T14:17:54+00:00  1M13S     gs://dt-donatas-sandbox-dev-staging/source/1694009873.552364-fb32142e7a9740909e0a330ba3cfe17c.tgz  -       SUCCESS\n",
+      "Building serving image\n",
+      "Creating temporary tarball archive of 7 file(s) totalling 87.1 KiB before compression.\n",
+      "Uploading tarball of [.] to [gs://dt-donatas-sandbox-dev-staging/source/1694009951.638785-186144ba8771421c998171d12fc788c2.tgz]\n",
+      "Created [https://cloudbuild.googleapis.com/v1/projects/dt-donatas-sandbox-dev/locations/europe-west2/builds/378f1da1-8eef-4cf6-85e6-27738a9bd038].\n",
+      "Logs are available at [ https://console.cloud.google.com/cloud-build/builds;region=europe-west2/378f1da1-8eef-4cf6-85e6-27738a9bd038?project=529423390811 ].\n",
+      "----------------------------- REMOTE BUILD OUTPUT ------------------------------\n",
+      "starting build \"378f1da1-8eef-4cf6-85e6-27738a9bd038\"\n",
+      "\n",
+      "FETCHSOURCE\n",
+      "Fetching storage object: gs://dt-donatas-sandbox-dev-staging/source/1694009951.638785-186144ba8771421c998171d12fc788c2.tgz#1694009952285513\n",
+      "Copying gs://dt-donatas-sandbox-dev-staging/source/1694009951.638785-186144ba8771421c998171d12fc788c2.tgz#1694009952285513...\n",
+      "/ [1 files][ 28.4 KiB/ 28.4 KiB]                                                \n",
+      "Operation completed over 1 objects/28.4 KiB.\n",
+      "BUILD\n",
+      "Pulling image: gcr.io/kaniko-project/executor:latest\n",
+      "latest: Pulling from kaniko-project/executor\n",
+      "24b9c0f43324: Already exists\n",
+      "0d0cf3a75faa: Already exists\n",
+      "a13620305055: Already exists\n",
+      "3c02b8d0f8d0: Pulling fs layer\n",
+      "f2ed186425e5: Pulling fs layer\n",
+      "c113a25f71a0: Pulling fs layer\n",
+      "e600f5fdfda3: Pulling fs layer\n",
+      "41ac909a10bf: Pulling fs layer\n",
+      "3eb8d55ab910: Pulling fs layer\n",
+      "e600f5fdfda3: Waiting\n",
+      "41ac909a10bf: Waiting\n",
+      "3eb8d55ab910: Waiting\n",
+      "3c02b8d0f8d0: Verifying Checksum\n",
+      "3c02b8d0f8d0: Download complete\n",
+      "f2ed186425e5: Verifying Checksum\n",
+      "f2ed186425e5: Download complete\n",
+      "c113a25f71a0: Verifying Checksum\n",
+      "c113a25f71a0: Download complete\n",
+      "e600f5fdfda3: Verifying Checksum\n",
+      "e600f5fdfda3: Download complete\n",
+      "41ac909a10bf: Verifying Checksum\n",
+      "41ac909a10bf: Download complete\n",
+      "3c02b8d0f8d0: Pull complete\n",
+      "f2ed186425e5: Pull complete\n",
+      "c113a25f71a0: Pull complete\n",
+      "e600f5fdfda3: Pull complete\n",
+      "41ac909a10bf: Pull complete\n",
+      "3eb8d55ab910: Verifying Checksum\n",
+      "3eb8d55ab910: Download complete\n",
+      "3eb8d55ab910: Pull complete\n",
+      "Digest: sha256:6aace7210ad8bf0da4b1aa707a1c0ea962d0e871bb1921504c1a5e690d5f6a2a\n",
+      "Status: Downloaded newer image for gcr.io/kaniko-project/executor:latest\n",
+      "gcr.io/kaniko-project/executor:latest\n",
+      "\u001b[36mINFO\u001b[0m[0000] Resolved base name python:3.9.16-slim to builder \n",
+      "\u001b[36mINFO\u001b[0m[0000] Resolved base name builder to training       \n",
+      "\u001b[36mINFO\u001b[0m[0000] Resolved base name builder to serving        \n",
+      "\u001b[36mINFO\u001b[0m[0000] Retrieving image manifest python:3.9.16-slim \n",
+      "\u001b[36mINFO\u001b[0m[0000] Retrieving image python:3.9.16-slim from registry index.docker.io\n",
+      "\u001b[36mINFO\u001b[0m[0000] Retrieving image manifest python:3.9.16-slim \n",
+      "\u001b[36mINFO\u001b[0m[0000] Returning cached image manifest              \n",
+      "\u001b[36mINFO\u001b[0m[0001] Built cross stage deps: map[]                \n",
+      "\u001b[36mINFO\u001b[0m[0001] Retrieving image manifest python:3.9.16-slim \n",
+      "\u001b[36mINFO\u001b[0m[0001] Returning cached image manifest              \n",
+      "\u001b[36mINFO\u001b[0m[0001] Retrieving image manifest python:3.9.16-slim \n",
+      "\u001b[36mINFO\u001b[0m[0001] Returning cached image manifest              \n",
+      "\u001b[36mINFO\u001b[0m[0001] Executing 0 build triggers                   \n",
+      "\u001b[36mINFO\u001b[0m[0001] Building stage 'python:3.9.16-slim' [idx: '0', base-idx: '-1'] \n",
+      "\u001b[36mINFO\u001b[0m[0001] Checking for cached layer europe-west2-docker.pkg.dev/dt-donatas-sandbox-dev/vertex-images/serving/cache:c11a5eafecf1c87b200f99fd974266d08cea862d33779292584b49d00403d0d0...\n",
+      "\u001b[36mINFO\u001b[0m[0001] Using caching version of cmd: RUN pip install poetry==${POETRY_VERSION} \n",
+      "\u001b[36mINFO\u001b[0m[0001] Checking for cached layer europe-west2-docker.pkg.dev/dt-donatas-sandbox-dev/vertex-images/serving/cache:3a4748cb15c98dbea0a12531d8158c54644335412df8f535d6bfb31666ad92e5... \n",
+      "\u001b[36mINFO\u001b[0m[0001] Using caching version of cmd: RUN poetry config virtualenvs.create false && poetry install \n",
+      "\u001b[36mINFO\u001b[0m[0001] Unpacking rootfs as cmd COPY pyproject.toml pyproject.toml requires it.\n",
+      "\u001b[36mINFO\u001b[0m[0005] ENV PIP_NO_CACHE_DIR=off     PIP_DISABLE_PIP_VERSION_CHECK=on     PIP_DEFAULT_TIMEOUT=100 \n",
+      "\u001b[36mINFO\u001b[0m[0005] No files changed in this command, skipping snapshotting. \n",
+      "\u001b[36mINFO\u001b[0m[0005] ARG POETRY_VERSION=1.5.1                     \n",
+      "\u001b[36mINFO\u001b[0m[0005] No files changed in this command, skipping snapshotting. \n",
+      "\u001b[36mINFO\u001b[0m[0005] COPY pyproject.toml pyproject.toml           \n",
+      "\u001b[36mINFO\u001b[0m[0005] Taking snapshot of files...                  \n",
+      "\u001b[36mINFO\u001b[0m[0005] COPY poetry.lock poetry.lock                 \n",
+      "\u001b[36mINFO\u001b[0m[0005] Taking snapshot of files...                  \n",
+      "\u001b[36mINFO\u001b[0m[0005] RUN pip install poetry==${POETRY_VERSION}    \n",
+      "\u001b[36mINFO\u001b[0m[0005] Found cached layer, extracting to filesystem\n",
+      "\u001b[36mINFO\u001b[0m[0006] RUN poetry config virtualenvs.create false && poetry install \n",
+      "\u001b[36mINFO\u001b[0m[0006] Found cached layer, extracting to filesystem\n",
+      "\u001b[36mINFO\u001b[0m[0026] Storing source image from stage 0 at path /kaniko/stages/0\n",
+      "\u001b[36mINFO\u001b[0m[0034] Deleting filesystem...\n",
+      "\u001b[36mINFO\u001b[0m[0035] Base image from previous stage 0 found, using saved tar at path /kaniko/stages/0 \n",
+      "\u001b[36mINFO\u001b[0m[0035] Executing 0 build triggers\n",
+      "\u001b[36mINFO\u001b[0m[0038] Building stage 'builder' [idx: '1', base-idx: '0'] \n",
+      "\u001b[36mINFO\u001b[0m[0038] Unpacking rootfs as cmd COPY training/train.py training/train.py requires it.\n",
+      "\u001b[36mINFO\u001b[0m[0050] COPY training/train.py training/train.py     \n",
+      "\u001b[36mINFO\u001b[0m[0050] Taking snapshot of files...                  \n",
+      "\u001b[36mINFO\u001b[0m[0050] Deleting filesystem...\n",
+      "\u001b[36mINFO\u001b[0m[0051] Base image from previous stage 0 found, using saved tar at path /kaniko/stages/0 \n",
+      "\u001b[36mINFO\u001b[0m[0051] Executing 0 build triggers\n",
+      "\u001b[36mINFO\u001b[0m[0054] Building stage 'builder' [idx: '2', base-idx: '0'] \n",
+      "\u001b[36mINFO\u001b[0m[0054] Checking for cached layer europe-west2-docker.pkg.dev/dt-donatas-sandbox-dev/vertex-images/serving/cache:440ff423928e582f8e1aebbb700d6abb6bd659cd07668be714ab9441e42cc2e3... \n",
+      "\u001b[36mINFO\u001b[0m[0054] Using caching version of cmd: RUN poetry install --with serving \n",
+      "\u001b[36mINFO\u001b[0m[0054] Unpacking rootfs as cmd COPY serving/main.py serving/main.py requires it.\n",
+      "\u001b[36mINFO\u001b[0m[0066] RUN poetry install --with serving            \n",
+      "\u001b[36mINFO\u001b[0m[0066] Found cached layer, extracting to filesystem \n",
+      "\u001b[36mINFO\u001b[0m[0067] COPY serving/main.py serving/main.py         \n",
+      "\u001b[36mINFO\u001b[0m[0067] Taking snapshot of files...                  \n",
+      "\u001b[36mINFO\u001b[0m[0067] CMD exec uvicorn serving.main:app --host \"0.0.0.0\" --port \"$AIP_HTTP_PORT\" \n",
+      "\u001b[36mINFO\u001b[0m[0067] No files changed in this command, skipping snapshotting. \n",
+      "\u001b[36mINFO\u001b[0m[0067] Pushing image to europe-west2-docker.pkg.dev/dt-donatas-sandbox-dev/vertex-images/serving:\n",
+      "\u001b[36mINFO\u001b[0m[0067] Pushed europe-west2-docker.pkg.dev/dt-donatas-sandbox-dev/vertex-images/serving@sha256:b85a7e4707a61ab47b92c87bdf6954bf402a7ef57a83481baf18948f8ca99ee3\n",
+      "PUSH\n",
+      "DONE\n",
+      "--------------------------------------------------------------------------------\n",
+      "ID                                    CREATE_TIME                DURATION  SOURCE                                                                                             IMAGES  STATUS\n",
+      "378f1da1-8eef-4cf6-85e6-27738a9bd038  2023-09-06T14:19:12+00:00  1M25S     gs://dt-donatas-sandbox-dev-staging/source/1694009951.638785-186144ba8771421c998171d12fc788c2.tgz  -       SUCCESS\n"
      ]
     }
    ],
@@ -3741,9 +3863,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 51,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/donatasmickevicius/code/vertex-pipelines-end-to-end-samples/vertex-pipelines-end-to-end-samples/pipelines/src/pipelines/training/pipeline.yaml\n",
+      "Creating PipelineJob\n",
+      "PipelineJob created. Resource name: projects/529423390811/locations/europe-west2/pipelineJobs/xgboost-train-pipeline-20230906152310\n",
+      "To use this PipelineJob in another session:\n",
+      "pipeline_job = aiplatform.PipelineJob.get('projects/529423390811/locations/europe-west2/pipelineJobs/xgboost-train-pipeline-20230906152310')\n",
+      "View Pipeline Job:\n",
+      "https://console.cloud.google.com/vertex-ai/locations/europe-west2/pipelines/runs/xgboost-train-pipeline-20230906152310?project=529423390811\n"
+     ]
+    }
+   ],
    "source": [
     "! make run pipeline=training build=false"
    ]
