--- a/examples/pipelines.ipynb
+++ b/examples/pipelines.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "{TODO: Update the links below.} \n",
     "\n",
-    "{TODO: 🔴 Potentially remove colab and workbench as terraform installation could be difficult?}\n",
+    "{TODO: 🔴🔴🔴 Potentially remove colab and workbench as terraform installation could be difficult?}\n",
     "\n",
     "<table align=\"left\">\n",
     "\n",
@@ -234,7 +234,7 @@
     "id": "58707a750154"
    },
    "source": [
-    "### Colab only: Uncomment the following cell to restart the kernel. 🔴{TODO: Potentially remove colab as terraform installation could be difficult?}"
+    "### Colab only: Uncomment the following cell to restart the kernel. 🔴🔴🔴{TODO: Potentially remove colab as terraform installation could be difficult?}"
    ]
   },
   {
@@ -379,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to run make commands relevant environment variables need to be set. Please create `env.sh`, and update the environment variables for your dev environment (particularly `VERTEX_PROJECT_ID`, `VERTEX_LOCATION` and `RESOURCE_SUFFIX`)."
+    "In order to run make commands relevant environment variables need to be set. Please update the environment variables for your dev environment (particularly `VERTEX_PROJECT_ID`, `VERTEX_LOCATION` and `RESOURCE_SUFFIX`)."
    ]
   },
   {
@@ -837,7 +837,7 @@
    },
    "outputs": [],
    "source": [
-    "# I've been getting state lock issues 🔴🔴🔴  -lock=false fixes it"
+    "# I've been getting state lock issues 🔴  -lock=false fixes it"
    ]
   },
   {
