style: Notebook style

--- a/examples/pipelines.ipynb
+++ b/examples/pipelines.ipynb
@@ -69,7 +69,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "tvgnzT1CKxrO"
+    "id": "tvgnzT1CKxrO",
+    "tags": []
    },
    "source": [
     "## Overview\n",
@@ -194,7 +195,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "i7EUnXsZhAGF"
+    "id": "i7EUnXsZhAGF",
+    "tags": []
    },
    "source": [
     "## Installation"
@@ -357,7 +359,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "BF1j6f9HApxa"
+    "id": "BF1j6f9HApxa",
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
    },
    "source": [
     "### Set up your Google Cloud project\n",
@@ -525,7 +529,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "zgPO1eR3CYjk"
+    "id": "zgPO1eR3CYjk",
+    "tags": []
    },
    "source": [
     "## Infrastructure deployment using terraform.\n"
@@ -613,9 +618,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## 2. Example ML Pipelines"
+    "## Example ML Pipelines"
    ]
   },
   {
@@ -866,7 +873,7 @@
     "id": "TpV-iwP9qw9c"
    },
    "source": [
-    "## 3. Cleaning up\n",
+    "## Cleaning up\n",
     "\n",
     "To clean up all Google Cloud resources used in this project, you can [delete the Google Cloud\n",
     "project](https://cloud.google.com/resource-manager/docs/creating-managing-projects#shutting_down_projects) you used for the tutorial.\n",
