feat: Terraform for workbench

--- a/examples/pipelines.ipynb
+++ b/examples/pipelines.ipynb
@@ -29,7 +29,7 @@
     "id": "JAPoU8Sm5E6e"
    },
    "source": [
-    "# Running Vertex Pipelines using End-to-end Samples repository.\n",
+    "# Running Vertex Pipelines using E2E Samples repository.\n",
     "\n",
     "{TODO: Update the links below.} \n",
     "\n",
@@ -252,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "! terraform --version"
+    "! terraform -version"
    ]
   },
   {
@@ -266,11 +266,25 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1. Local JupyterLab instance**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please follow installation instructions: https://developer.hashicorp.com/terraform/tutorials/aws-get-started/install-cli"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "**1. Vertex AI Workbench**"
+    "**2. Vertex AI Workbench, uncomment and run**"
    ]
   },
   {
@@ -281,23 +295,30 @@
    },
    "outputs": [],
    "source": [
-    "# "
+    "# %%bash\n",
+    "# curl -so terraform.zip https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip\n",
+    "# unzip terraform.zip > /dev/null && rm -f terraform.zip > /dev/null\n",
+    "# mkdir $HOME/bin\n",
+    "# mv terraform $HOME/bin > /dev/null"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "**2. Local JupyterLab instance**"
+    "# import os\n",
+    "# os.environ['PATH'] += os.pathsep + os.path.join(os.environ['HOME'], 'bin')"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "Please follow installation instructions: https://developer.hashicorp.com/terraform/tutorials/aws-get-started/install-cli"
+    "# ! terraform -version"
    ]
   },
   {
