--- a/examples/pipelines.ipynb
+++ b/examples/pipelines.ipynb
@@ -241,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check if terrafororm is installed."
+    "Check if terraform is installed."
    ]
   },
   {
@@ -381,7 +381,6 @@
    "cell_type": "markdown",
    "metadata": {
     "id": "BF1j6f9HApxa",
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
